# edo-ROS2

./: .gitignore  GestureControlPhysicalRobot.cpp  GestureSubscriber.cpp  Mapping_Rules_Tutorial.md  README.md  ROStoCV.py  SetupInstructions.txt  demo.cpp  edo_gripper_dummy.xacro  openCVToClass.py  run.sh  run_manual_ctrl.sh  start_bridge.sh  testing.sh
Buckets Files/Blue_Bucket_Model/: model.config  model.sdf
Buckets Files/Green_Bucket_Model/: model.config  model.sdf
Buckets Files/Red_Bucket_Model/: model.config  model.sdf
ROS/eDO_core_msgs/: README.md  package.xml
ROS/eDO_core_msgs/msg/: JointConfiguration.msg  JointConfigurationArray.msg  JointFwVersion.msg  JointFwVersionArray.msg  JointInit.msg  JointMonitoring.msg  JointsPositions.msg  MachineState.msg  MovementCommand.msg  MovementFeedback.msg  edoError.msg
ROS/eDO_core_msgs/srv/: DirectKinematics.srv  InverseKinematics.srv  JointsNumber.srv  LoadConfigurationFile.srv
ROS/eDO_manual_ctrl/Documentation/html/: DataDisplay_8cpp.html  DataDisplay_8cpp__incl.map  DataDisplay_8cpp_source.html  DataDisplay_8h.html  DataDisplay_8h__dep__incl.md5  LICENSE_8md_source.html  MovementCommandQueue_8cpp__incl.md5  MovementCommandQueue_8cpp_source.html  MovementCommandQueue_8h.html  files.html  (+24 more)
ROS/eDO_manual_ctrl/include/: Relay.h
ROS/eDO_manual_ctrl/src/: temp_node.cpp
ROS/edo_gesture_ctrl/: package.xml
ROS/edo_manual_ctrl/: CMakeLists.txt
ROS/edo_manual_ctrl/include/: DataDisplay.h  MovementCommandQueue.h  StateChecker.h
ROS/edo_manual_ctrl/src/: DataDisplay.cpp  EdoFunctions.cpp  SampleCLI.cpp
ROS/edo_sorting/launch/: edo_sort.launch
ROS/edomoveitapi/: CMakeLists.txt
ROS/edomoveitapi/src/: demo.cpp
ROS/src/eDO_core_msgs/: CMakeLists.txt
ROS/src/eDO_manual_ctrl/: CMakeLists.txt
ROS/src/edo_gesture_ctrl/: CMakeLists.txt
ROS/src/edo_sorting/: CMakeLists.txt  package.xml
ROS/src/edomoveitapi/: CMakeLists.txt  package.xml
ROS/src/joint_state_pub/: CMakeLists.txt  JointStateArrayPub.cpp  package.xml
ROS2/Conversion_in_progress/: CMakeLists.txt  package.xml
ROS2/Conversion_in_progress/include/: DataDisplay.h  MovementCommandQueue.h  MovementCommandQueue.hpp  StateChecker.h  StateChecker.hpp
ROS2/Conversion_in_progress/install/: setup.sh
ROS2/Conversion_in_progress/src/: DataDisplay.cpp  MovementCommandQueue.cpp  SampleCLI.cpp  StateChecker.cpp  edo_manual_ctrl.cpp
ROS2/classification_service/: CMakeLists.txt  package.xml
ROS2/classification_service/srv/: GetClassification.srv
ROS2/edo_calibration/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ROS2/edo_calibration/edo_calibration/: baseDetection.py  edo_scan.py  threshold.py
ROS2/edo_calibration/log/: latest_list
ROS2/edo_calibration/src/: baseDetection.py  calibrate.cpp
ROS2/edo_core_msgs/: CMakeLists.txt  mapping_rule.yaml  package.xml
ROS2/edo_core_msgs/msg/: Frame.msg  JointCalibration.msg  JointControlArray.msg  JointFwVersion.msg  JointReset.msg  JointState.msg  JointStateArray.msg  Point.msg  SystemCommand.msg
ROS2/edo_core_msgs/srv/: ControlSwitch.srv
ROS2/edo_gesture_ctrl/: package.xml
ROS2/edo_gesture_ctrl/src/: GestureControl.cpp  GestureControlPhysicalRobot_v2.cpp  GestureSubscriber.py
ROS2/edo_manual_ctrl/: CMakeLists.txt  package.xml
ROS2/edo_manual_ctrl/edo_manual_ctrl/: CMakeLists.txt  package.xml
ROS2/edo_manual_ctrl/edo_manual_ctrl/src/: StateChecker.cpp
ROS2/edo_manual_ctrl/include/: DataDisplay.h  MovementCommandQueue.h  StateChecker.h
ROS2/edo_manual_ctrl/src/: DataDisplay.cpp  EdoFunctions.cpp  ManualControl.cpp  MovementCommandQueue.cpp  SampleCLI.cpp  StateChecker.cpp
ROS2/edo_navigation/: package.xml  setup.py
ROS2/edo_navigation/edo_navigation/: baseDetection.py  classification_subscriber.py  edo_environment_subscriber.py  edo_scan.py  location_subscriber.py  myfirstmovecommand.py  obj_detection_subscriber.py  setup.cfg
ROS2/edo_sorting/launch/: edo_sort.launch
ROS2/edo_sorting/table/: model.sdf
ROS2/edo_sorting/worlds/: cameraplugin  tablesheet.world
ROS2/live_classifier/: package.xml
ROS2/live_classifier/live_classifier/: live_classifier_helper.py
ROS2/live_classifier/resource/: classlabels.txt
ROS2/state_checker_sub/: CMakeLists.txt
ROS2/testing packages/pub_sub_testing/: package.xml
ROS2/testing_packages/pub_sub_testing/: CMakeLists.txt  package.xml
ROS2/testing_packages/state_checker_sub/: package.xml
ROS2/vision/: CMakeLists.txt  package.xml
ROS2/vision/src/: edo_environment_subscriber.py  subscriber_member_function.cpp
ROS2/vision/src/edo_navigation/edo_navigation/: edo_environment_subscriber.py
Tutorials and Documentation/: 1_Installation of ROS1 Melodic.md  2_Installation of  ROS2 Eloquent.md  3_Cloning of GitHub Repository.md  4_Setting up a ROS1 Build Workspace.md  5_Setting up a ROS2 Build Workspace.md  6_Installing the ncurses Library.md  7_Building and Setup of ROS1 Bridge.md  8_Building edo_manual_ctrl.md  9_Mapping_Rules_Tutorial.md
basic_edo_pub/: CMakeLists.txt
basic_edo_pub/include/: StateChecker.hpp
basic_edo_pub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
bridge/: CMakeLists.txt
core_msgs/: CMakeLists.txt  package.xml
core_msgs/msg/: JointConfigurationArray.msg  JointControl.msg  JointControlArray.msg  JointFwVersionArray.msg  JointStateArray.msg  MovementCommand.msg  NodeSwVersion.msg  NodeSwVersionArray.msg  Point.msg
core_msgs/srv/: DirectKinematics.srv  InverseKinematics.srv  SoftwareVersion.srv
edo_core_msgs/msg/: CartesianPose.msg
edo_core_msgs/srv/: SoftwareVersion.srv
edo_manual_ctrl/: CMakeLists.txt
edo_manual_ctrl/src/: edo_manual_ctrl.cpp
edo_navigation/edo_navigation/: edo_environment_subscriber.py
ros1_bridge/: CMakeLists.txt  package.xml
ros1_bridge/src/: simple_bridge_1_to_2.cpp
ros1_bridge/src/ros1_bridge/: mapping_rule.yaml  package.xml
state_checker_sub/include/: StateChecker.hpp
state_checker_sub/src/: StateChecker.cpp
training/: README.md  labels
training/scripts/: classify_checks.ipynb  cropPhotos.py  renameAnnotations.py  renameFiles.py  resizePhotos.py
(+151 files in other folders)
