<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_trt_pose_hand</name>
  <version>0.0.0</version>
  <description>Gesture Control</description>
  <maintainer email="bb8648@wayne.edu">Laura Gipson</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>hand_pose_msgs</exec_depend>
  <exec_depend>image_tools</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
